apps/hello-world/base/hello-world-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: app
        image: hello-world
        volumeMounts:
        - name: init
          mountPath: /toolbox
        ports:
        - containerPort: 8080
      serviceAccountName: hello-world
      volumes:
      - name: init
        configMap:
          name: hello-world-init
