apps/hello-world/base/toolbox-container-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toolbox-container
  template:
    metadata:
      labels:
        app: toolbox-container
    spec:
      containers:
      - image: toolbox-container
        imagePullPolicy: Always
        name: toolbox-container
        volumeMounts:
        - name: init
          mountPath: /toolbox
        ports:
        - containerPort: 8080
      serviceAccountName: toolbox-container
      volumes:
      - name: init
        configMap:
          name: toolbox-container-init
