apps/hello-world/base/hello-world-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
