apps/hello-world/base/toolbox-container-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolbox-container
spec:
  selector:
    app: toolbox-container
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
  type: ClusterIP
