apps/hello-world/base/hello-world-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
spec:
  port:
    targetPort: http-8080
  to:
    kind: Service
    name: hello-world
