apps/hello-world/base/toolbox-container-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: toolbox-container
spec:
  port:
    targetPort: http-8080
  to:
    kind: Service
    name: toolbox-container
